# pdf-intelligence-core

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cli/: __main__.py  graph.py  index.py  ingest.py  query.py
configs/: settings.yaml
docs/: PIPELINE.md  architecture.md  docker_runtime.md  phase_1_ingestion.md  phase_2_indexing_memory.md  phase_3_graph_structure.md
pdf_intelligence_core/: __init__.py  cli.py  pipeline.py  types.py
pdf_intelligence_core/phase1/: __init__.py  audit.py  extract.py  normalize.py  validate.py
pdf_intelligence_core/phase2/: __init__.py  chunk.py  embed.py  index.py  retrieve.py
pdf_intelligence_core/phase3/: __init__.py  graph.py
src/pdf_core/: __init__.py  config.py
src/pdf_core/graph/: __init__.py  builder.py  extractor.py  pipeline.py  schema.py  store.py  trace.py
src/pdf_core/index/: __init__.py  chunker.py  embedder.py  pipeline.py  retriever.py  trace.py  vectorstore.py
src/pdf_core/ingest/: __init__.py  extract.py  normalize.py  pipeline.py  validate.py
src/pdf_core/storage/: __init__.py  audit.py
tests/: test_chunker.py  test_cli_main.py  test_graph_extractor.py  test_normalize.py  test_pipeline.py
