[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-intelligence-core"
version = "0.1.0"
description = "Phased document-intelligence pipeline from PDF validation through retrieval to graph projection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Obversary Studios" }]
keywords = ["pdf", "document-intelligence", "embeddings", "graph", "pipeline"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
]

[project.scripts]
pdf-intelligence = "pdf_intelligence_core.cli:main"

[project.urls]
Homepage = "https://github.com/obversary/pdf-intelligence-core"
Repository = "https://github.com/obversary/pdf-intelligence-core"

[tool.hatch.build.targets.wheel]
packages = ["pdf_intelligence_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
