[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-intelligence-core"
version = "0.1.0"
description = "A minimal observable document intelligence pipeline: PDF ingestion, indexing, retrieval, and graph projection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "pymupdf>=1.24",
  "pymupdf4llm>=0.0.16",
  "pdfplumber>=0.11",
  "sentence-transformers>=3.0",
  "faiss-cpu>=1.7",
  "numpy>=1.24",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
pdf-core-ingest = "cli.ingest:main"
pdf-core-index = "cli.index:main"
pdf-core-query = "cli.query:main"
pdf-core-graph = "cli.graph:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["pdf_core*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py310"
